--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,19 @@
 h1{
   font-size: 48px;
 }
+
+.home{
+  padding: 82px 0 0 0;
+}
+
+@media (min-width: 992px){
+  .container {
+      width: 100%;
+  }
+}
+
+@media (min-width: 768px){
+  .container {
+      width: 100%;
+  }
+}
