added image, created basic page structure

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,23 +15,19 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li>
+            <!--<li>
                 {% for my_page in site.pages %}
                   {% if my_page.title %}
                   <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
                   {% endif %}
                 {% endfor %}
-            </li>
-            <li><a href="../navbar/">Default</a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+            </li>-->
+            <li><a href="index.html#page-1">01 | Who I Am</a></li>
+            <li><a href="index.html#page-2">02 | What I Do</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
-
-
 
   </div>
 
