added remaining pages and background image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,9 @@
             </li>-->
             <li><a href="index.html#page-1">01 | Who I Am</a></li>
             <li><a href="index.html#page-2">02 | What I Do</a></li>
+            <li><a href="index.html#page-3">03 | Awards</a></li>
+            <li><a href="index.html#page-4">04 | Acknowledgements</a></li>
+            <li><a href="index.html#page-5">05 | Press</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
